--- a/.github/workflows/build_with_alternative_compilers.yaml
+++ b/.github/workflows/build_with_alternative_compilers.yaml
@@ -36,7 +36,7 @@ jobs:
           version: ${{ matrix.toolchain.version }}
 
       - run: source /opt/intel/oneapi/setvars.sh
-        if: matrix.compiler == 'intel'
+        if: matrix.toolchain.compiler == 'intel'
 
 
       - name: Build wheels
