--- a/libs/fakeblocks/pyproject.toml
+++ b/libs/fakeblocks/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.8"
 dependencies = [
    "numpy",
    "scipy",
-   "capytaine>=3.0",
+   "capytaine>=3.0.dev",
 ]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
