--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,10 @@ requires = [
     "numpy==1.24.4; python_version=='3.8'",
 ]
 
+[tool.uv]
+cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
+# Rebuilt the cached Capytaine from local dir if git commit changed.
+
 [tool.cibuildwheel]
 test-requires = ["pytest"]
 test-command = "pytest {project}/pytest/"
