CI: add upper bound to docs requirements
Because of https://github.com/executablebooks/sphinx-tabs/issues/206

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ more_optional = [
   # These dependencies are causing issues in CI.
   ]
 docs = [
-  "sphinx",
+  "sphinx", "docutils<0.22",
   "sphinx-copybutton", "sphinx-tabs",
   "sphinx-proof", "sphinxcontrib-mermaid"
 ]
